--- a/src/components/light-mode/light-mode.css
+++ b/src/components/light-mode/light-mode.css
@@ -2,7 +2,3 @@
     position: relative;
     height:2.4rem;
 }
-
-#light-mode:hover{
-    background: none;
-}
