--- a/src/components/logo/logo.css
+++ b/src/components/logo/logo.css
@@ -18,6 +18,8 @@
     padding: 1.1rem;
     border-radius: .8rem;
     color:#fff;
+    flex: 0 0 auto;
+    text-align: center;
 }
 
 .logo__title{
